--- a/pom.xml
+++ b/pom.xml
@@ -23,17 +23,17 @@
     <version>25</version>
   </parent>
 
-  <groupId>org.aerogear.kafka</groupId>
+  <groupId>cloud.altemista.kafka</groupId>
   <artifactId>kafka-cdi-extension</artifactId>
-  <version>0.1.1-SNAPSHOT</version>
+  <version>0.1.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>kafka-cdi</name>
-  <description>simple CDI extension for Apache Kafka</description>
+  <description>Simple CDI extension for Apache Kafka</description>
 
   <scm>
-    <connection>scm:git:git://github.com/aerogear/kafka-cdi.git</connection>
-    <developerConnection>scm:git:git@github.com:aerogear/kafka-cdi.git</developerConnection>
-    <url>https://github.com/aerogear/kafka-cdi</url>
+    <connection>scm:git:https://github.com/Altemista/kafka-cdi.git</connection>
+    <developerConnection>scm:git:git@gitlab.imobility.azure.altemista.cloud:nxt-infrastructure/kafka-cdi.git</developerConnection>
+    <url>https://github.com/Altemista/kafka-cdi</url>
     <tag>HEAD</tag>
   </scm>
 
@@ -59,6 +59,18 @@
     <developer>
       <id>dimitraz</id>
       <name>Dimitra Zuccarelli</name>
+    </developer>
+
+    <developer>
+      <id>patrick-zinner</id>
+      <name>Patrick Zinner</name>
+      <organization>NTT DATA</organization>
+    </developer>
+
+    <developer>
+      <id>michaelpaesold</id>
+      <name>Michael Paesold</name>
+      <organization>NTT DATA</organization>
     </developer>
   </developers>
 
