--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>25</version>
   </parent>
 
-  <groupId>cloud.altemista.kafka</groupId>
+    <groupId>cloud.nxt-mobility</groupId>
   <artifactId>kafka-cdi-extension</artifactId>
   <version>0.1.8-SNAPSHOT</version>
   <packaging>jar</packaging>
